[package]
name = "vm-alloc"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
# Required for interacting with the Libvirt API
virt = "0.4"
virt-sys = "0.3.1"
# For file system operations and error handling
anyhow = "1.0"
# For running asynchronous operations
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xmltree = "0.11.0"
sha-crypt = "0.5"
serde_yml = "0.0.12"
